@@ -130,21 +130,20 @@
 	</TR>
 	{/if}
 	<TR CLASS="dark">
-	        <TD CLASS="fall" COLSPAN="6">
+		<TD CLASS="fall" COLSPAN="6">
 		        <TABLE WIDTH="100%">
-			     <TR>
-			    	<TD ALIGN="left">
+				<TR>
+					<TD ALIGN="left">
 						<NOBR>
-						<A HREF="javascript:document.page.submit();">{t}Confirm{/t} <IMG SRC="img/confirm.gif" ALT=""></A>
-						<A HREF="javascript:DeleteMarked();">{t}Delete{/t} <IMG SRC="img/delete.gif" ALT="{t}Delete{/t}" HSPACE="2"></A>
+						<A HREF="javascript:document.page.submit();">{t}Confirm{/t} <IMG SRC="img/confirm.gif" ALT=""></A>&nbsp;
+						<A HREF="javascript:DeleteMarked();">{t}Delete{/t} <IMG SRC="img/delete.gif" ALT="{t}Delete{/t}"></A>
 						</NOBR>
 					</TD>
 					<TD ALIGN="right">
-				                    <NOBR><A HREF="javascript:CheckAll2();">{t}Check All{/t}</A><INPUT class="box dark" TYPE="checkbox" NAME="allbox" onClick="CheckAll();" VALUE="Check All Boxes"></NOBR>
-						    
+				                <NOBR><A HREF="javascript:CheckAll2();">{t}Check All{/t}</A><INPUT class="box dark" TYPE="checkbox" NAME="allbox" onClick="CheckAll();" VALUE="Check All Boxes"></NOBR>
 					</TD>
 				 </TR>
-				</TABLE>
+			</TABLE>
 		</TD>
 	</TR>
 	</FORM>
