@@ -51,6 +51,7 @@ version ? (????-??-??):
   - added .htaccess files in /lib and /modules dirs (alec)
   - Romanian language support (zet/alec)
   - added notifications about availability of LMS's newer versions (alec)
+  - added possibility to remove selected documents on documents list (zet/alec)
 
 version 1.9.6 Belos (2007-02-16):
 
